--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<p class="text-detail">kris.bodrozic@gmail.com</p>
 					</div>
 					<div class="col">
-						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
+						<img src="assets/website-icon.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
@@ -83,7 +83,7 @@
 						<p class="text-detail">conectandomundo.com</p>
 					</div>
 					<div class="col">
-						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
+						<img src="assets/address-icon.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
