--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Sao Paulo - Berlin - Shanghai</p>
 				</div>
 				<div class="col">
-					<img src="assets/logo.jpeg" alt="Company Logo">
+					<img src="assets/logo.png.jpeg" alt="Company Logo">
 				</div>
 			</div>
 		</div>
