--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<p class="text-detail">kris.bodrozic@gmail.com</p>
 					</div>
 					<div class="col">
-						<img src="assets/website-icon.jpg" alt="Right Arrow" height="50%" width="40%">
+						<img src="assets/website-icon.png" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
@@ -65,7 +65,7 @@
 						<p class="text-detail">(+55) 11 9950 44010</p>
 					</div>
 					<div class="col">
-						<img src="assets/website-icon.jpg" alt="Right Arrow" height="50%" width="40%">
+						<img src="assets/website-icon.png" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
