--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 			<div class="row name-title-company">
 				<div class="col is-6">
 					<p class="text-name">Kris Bodrozic</p>
-					<p class="text-title-company">Language Professional & Writer</p>
-					<p class="text-title-company">Sao Paulo - Berlin - Shanghai</p>
+					<p class="text-title-company">Language & Culture Professional, Writer</p>
+					<p class="text-title-company">Conectando O Mundo</p>
 				</div>
 				<div class="col">
-					<img src="assets/logo.png.jpeg" alt="Company Logo">
+					<img src="assets/logo.png" alt="Company Logo">
 				</div>
 			</div>
 		</div>
@@ -47,25 +47,24 @@
 						<p class="text-detail">kris.bodrozic@gmail.com</p>
 					</div>
 					<div class="col">
-						<img src="assets/website-icon.png" alt="Right Arrow" height="50%" width="40%">
+						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
 		</a>
 	</section>
-
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+55 11 9950 44010">
+		<a href="tel:+55 11 99504 4010">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(+55) 11 9950 44010</p>
+						<p class="text-detail">(+55) 11 99504 4010</p>
 					</div>
 					<div class="col">
-						<img src="assets/website-icon.png" alt="Right Arrow" height="50%" width="40%">
+						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
@@ -73,34 +72,34 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://conectandomundo.com">
+		<a href="https://www.conectandomundo.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="" alt="Website Icon"">
+						<img src="assets/icon-website.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">conectandomundo.com</p>
 					</div>
 					<div class="col">
-						<img src="assets/address-icon.jpg" alt="Right Arrow" height="50%" width="40%">
+						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
 		</a>
 	</section>
-
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.google.com/maps/place/Charlottenburg,+Berlin/@52.5155893,13.2760438,13z/data=!3m1!4b1!4m5!3m4!1s0x47a8512467b4d423:0x57d3275503c0711a!8m2!3d52.5166023!4d13.3041054">
+		<a href="https://www.google.com/maps/place/Wittelsbacherstra%C3%9Fe+27,+10707+Berlin/@52.4947056,13.310411,17z/data=!3m1!4b1!4m5!3m4!1s0x47a850ee8f35fa4d:0xb00005a8ab2c0e94!8m2!3d52.4947056!4d13.312605">
+			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="" alt="Address Icon"">
+						<img src="assets/icon-address.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">Berlin, Germany</p>
+						<p class="text-detail">Berlin</p>
 					</div>
 					<div class="col">
-						<img src="assets/address-icon.jpg" alt="Right Arrow" height="50%" width="40%">
+						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
