--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Conectando O Mundo</p>
 				</div>
 				<div class="col">
-					<img src="assets/logo.png" alt="Company Logo">
+					<img src="assets/logo.png,jpg" alt="Company Logo">
 				</div>
 			</div>
 		</div>
